a bunch of fixes to dragging and snapping: fit snapped blocks closer together, removed red border, fixed dragging while snapped, stopped resizing to match while snapped, stopped wrapping within blocks, began work on removing from drag parent when dragged in canvas.

--- a/trunk/blocks/stylesheets/block_dragging.css
+++ b/trunk/blocks/stylesheets/block_dragging.css
@@ -1,5 +1,6 @@
 .drag_wrapper{
 /*    border: 1px solid red; */
+    white-space: nowrap;
 }
 
 .drop_pointer{
